--- a/public/practice/2.html
+++ b/public/practice/2.html
@@ -2,9 +2,51 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Jquery Learing</title>
+	<link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css">
+	<style>
+		.test{
+			border: 1px solid red;
+			padding: 2px;
+			margin: 1px;
+			border-radius: 20px;
+		}
+	</style>
+	
 </head>
 <body>
 	<h1>hello</h1>
+	<div id="myid">
+		hiiiiiiiiii
+	</div>
+	<span>
+		helllo
+	</span>
+
+	<div class="mycls">
+		one more
+	</div>
+	<div class="mycls1">
+		mycls1
+	</div>
+	<div class="mycls2">
+		mycls2
+	</div>
+	<div class="mycls3">
+		mycls3
+	</div>
+	<div class="mycls4">
+		mycls4
+	</div>
+	<pre>
+		one more
+	</pre>
+	<script src="../lib/jquery/dist/jquery.js"></script>
+	<script>
+		var elementCount=$("*");
+			elementCount.addClass("test")
+		console.log(elementCount)
+
+	</script>
 </body>
 </html>
